todo-app/server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: todo-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: images-volume
          persistentVolumeClaim:
              claimName: images-claim
      containers:
        - name: todo-app
          image: TODOAPP/SERVER
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          volumeMounts:
            - mountPath: /usr/src/app/images
              name: images-volume
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /api/healthz
               port: 8050
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
               path: /api/healthz
               port: 8050
