todo-app/server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: todo-namespace
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8050
