todo-app/server/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-namespace
spec:
  rules:
  - http:
      paths:
      - path: /todoapp
        backend:
          serviceName: todo-app-client-svc
          servicePort: 2347
      - path: /todoapp/api
        backend:
          serviceName: todo-app-svc
          servicePort: 2348
